# aws-lambda-simple-web-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GLOSSARY.md  LICENSE  LITERATURE_REVIEW.md  MATHEMATICAL_PROOFS.md  PATENT_CLAIMS_FINAL.md  PATENT_FILING_MASTER.md  QUICKSTART.md  README.md  README_SUMMARY.md  RESEARCH_SUMMARY.md  SCBE_MATH_SPEC.md  SECURITY.md  SPIRALVERSE_PROTOCOL.md  SPIRALVERSE_PROTOCOL_v3.0.md  STRATEGIC_ANALYSIS.md  TRIADIC_MANIFOLD_VALIDATION.md  USPTO_FINAL_APPLICATION_V5.md  USPTO_PATENT_APPLICATION.md  USPTO_PROVISIONAL_SWARM.md  VERIFICATION_REPORT.md  cdk.json  conlang_harmonics.py  demo_ai_memory_shard.py  demo_dimensional_fold.py  demo_five_axis.py  demo_geoseal.py  demo_integrated_memory_shard.py  demo_memory_shard.py  demo_quantum_resistance.py  demo_rings.py  demo_temporal_lattice.py  deploy.sh  dimensional_analysis.py  docker-compose.yml  error.html  (+30 more)
.github/workflows/: ci.yml  docs.yml  enterprise-tests.yml  release.yml  scbe-tests.yml  security-pipeline.yml
aether-browser/: README.md
api/: __init__.py  main.py  models.py
demos/: spiral_diagram.txt  staggered_auth_demo.py  vertical_wall_demo.py
docs/: API_REFERENCE.md  CLIENT_WALKTHROUGH.md  DEPLOYMENT.md  ENTERPRISE_TESTING_SPEC.md  FULL_SYSTEM_ENABLEMENT.md  MATHEMATICAL_PROOFS.md  PATENT_CLAIMS_UPDATE.md  PRICING_TIERS.md  SALES_DECK.md  SIMPLE_GUIDE.md  SPIRALVERSE_PROTOCOL_V3.md  SYSTEM_ARCHITECTURE_REPORT.md  TESTING.md  WIDGETS.md  index.html
examples/: ai_context_binding.py  api_protection.py  basic_auth.py  demo_scbe_sacred_tongues.py
lambda/: README.md  deploy.sh  requirements.txt  scbe_handler.py  template.yaml
lib/: physics-simulation-stack.ts
scbe_aethermoore/: UNIFIED_SPECIFICATION.md  __init__.py  chaos.py  constants.py  context.py  dimensional_fold.py  geoseal.py  harmonic.py  hypercube_brain.py  intent.py  manifold.py  neural.py  physics.py  swarm.py  temporal.py  temporal_lattice.py
scbe_production/: __init__.py  api.py  config.py  exceptions.py  fleet.py  logging.py  service.py
scripts/: deploy.sh  destroy.sh  fleet_demo.sh  test-api.sh
spiralverse_sdk/: package.json  tsconfig.json
symphonic_cipher/: __init__.py  harmonic_scaling_law.py  qasi_core.py
tests/: README.md  SCBEBox.py  SCBE_BOX_PATENT_MAPPING.md  __init__.py  attack_sink_visualization.py  dimensional_theory_simulation.py  gravity_intent_evolution.py  multi_state_spin_encoding.py  quasicrystal_auth.py  setup.ts  test_aethermoore.py  test_compliance.py  test_entropic_dual_quantum_system.py  test_manifold.py  test_scbe_aethermoore.py  test_scbe_box.py  test_scbe_validation.py  test_spiral_seal.py
web/: app.py  compliance-dashboard.html  index.html  landing.html  requirements.txt
(+132 files in other folders)
